--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="hand min-hand"></div>
         <div class="hand sec-hand"></div>
       </div>
+      <p class="time"></p>
     </section>
   </body>
 </html>
